# dirt

./: .gitignore  README.md
cmake/: CMakeLists.txt
old_code/: cmdline.cpp  t_out.cpp  t_out.hpp
old_code/globals/: glb.cpp  glb.hpp
old_code/logger/classes/: wl.cpp
old_code/logger/init/: system_init.hpp
projects/dirt.core/api/: dirt_api.cpp  dirt_api.hpp
projects/dirt.core/classes/: cmdline.cpp  dw.hpp  logger.cpp  logger.hpp  output.cpp  output.hpp  processor.cpp  processor.hpp  t_out.cpp  t_out.hpp
projects/dirt.core/classes/backend/: output.cpp  output.hpp  processor.cpp
projects/dirt.core/classes/gui/: button.hpp
projects/dirt.core/classes/window/: dw.cpp  dw.hpp
projects/dirt.core/codes/: args.hpp  codes.hpp
projects/dirt.core/depends/macro/: defines.hpp  names.hpp
projects/dirt.core/depends/ui/: ftx_includes.cpp  ftx_includes.hpp
projects/dirt.core/depends/windows/: windows_dps.hpp
projects/dirt.core/entry/: main.cpp  main_entry.cpp  main_entry.hpp
projects/dirt.core/simulation/api/: sim_api.cpp  sim_api.hpp
projects/dirt.core/simulation/classes/: sim.cpp  sim.hpp
projects/dt.core/api/: dt_api.cpp  dt_api.hpp
projects/dt.core/classes/backend/: logger.cpp  logger.hpp  output.cpp  output.hpp  processor.cpp  processor.hpp  utility.cpp  utility.hpp
projects/dt.core/classes/gui/windows-64/: bar.cpp  bar.hpp  button.cpp  button.hpp  label.cpp  label.hpp  listbox.cpp  listbox.hpp  taskbar.cpp  taskbar.hpp  textbox.cpp  textbox.hpp  ui.cpp  ui.hpp
projects/dt.core/classes/logger/classes/: base.cpp  base.hpp  file.cpp  file.hpp  m_q_sys.cpp  m_q_sys.hpp  system_init.cpp  system_init.hpp  wl.cpp  wl.hpp
projects/dt.core/classes/ui/: ui.cpp  ui.hpp
projects/dt.core/classes/window/: dt_window.cpp  dt_window.hpp  dw.cpp  dw.hpp
projects/dt.core/codes/: args.hpp  codes.hpp
projects/dt.core/depends/macro/: defines.hpp  names.hpp
projects/dt.core/depends/stl/: stl.hpp  stl_includes.cpp  stl_includes.hpp
projects/dt.core/depends/windows/: windows_dps.cpp  windows_dps.hpp
projects/dt.core/entry/: main.cpp  main_entry.cpp  main_entry.hpp
projects/dt.core/simulation/api/: sim_api.cpp  sim_api.hpp
projects/dt.core/simulation/classes/: sim.cpp  sim.hpp
projects/logger/classes/: wl.cpp
test/: dirt_list.txt
